--- a/index.html
+++ b/index.html
@@ -3,22 +3,21 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Theatre ERP – Standalone (SQLite in the Browser)</title>
+  <title>Theatre ERP – Standalone</title>
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sql.js/1.10.2/sql-wasm.js" crossorigin="anonymous"></script>
   <style>
-    :root{ --bg:#f7fbff; --panel:#ffffff; --ink:#0f172a; --muted:#64748b; --line:#e2e8f0; --pri:#2563eb; --pri-ghost:#eaf1ff; --ok:#059669; --warn:#b45309; --err:#b91c1c; }
-    *{box-sizing:border-box}
-    html,body{height:100%}
+    :root{ --bg:#f7fbff; --panel:#ffffff; --ink:#0f172a; --muted:#64748b; --line:#e2e8f0; --pri:#2563eb; --pri-ghost:#eaf1ff; --warn:#b45309; --err:#b91c1c; }
+    *{box-sizing:border-box} html,body{height:100%}
     body{margin:0;font:14px/1.4 system-ui,Segoe UI,Roboto,Helvetica,Arial;color:var(--ink);background:var(--bg)}
     .app{display:grid;grid-template-columns:270px 1fr;min-height:100vh}
     .sidebar{background:#fff;border-right:1px solid var(--line);padding:16px;position:sticky;top:0;height:100vh}
     .brand{display:flex;gap:10px;align-items:center;margin-bottom:12px}
     .brand .logo{width:34px;height:34px;border-radius:8px;background:linear-gradient(135deg,#93c5fd,#2563eb);} 
     .brand h1{font-size:18px;margin:0}
+    .note{font-size:12px;color:var(--muted)}
     .nav{display:flex;flex-direction:column;gap:6px;margin-top:8px}
     .nav button{appearance:none;border:1px solid var(--line);background:var(--panel);padding:10px 12px;border-radius:10px;text-align:left;cursor:pointer}
-    .nav button.active{border-color:var(--pri);background:var(--pri-ghost)}
     .main{padding:18px}
     .toolbar{display:flex;gap:8px;flex-wrap:wrap;align-items:center;margin-bottom:12px}
     .toolbar .grow{flex:1}
@@ -28,35 +27,24 @@
     .btn.err{background:var(--err);border-color:var(--err);color:#fff}
     .card{background:#fff;border:1px solid var(--line);border-radius:14px;padding:12px}
     .grid{display:grid;gap:12px}
-    .grid.cols-2{grid-template-columns:repeat(2,minmax(0,1fr))}
     .grid.cols-3{grid-template-columns:repeat(3,minmax(0,1fr))}
     table{width:100%;border-collapse:separate;border-spacing:0}
     th,td{border-bottom:1px solid var(--line);padding:8px 10px;text-align:left}
     th{background:#f8fafc;position:sticky;top:0}
     .stat{display:flex;flex-direction:column;padding:12px;border:1px solid var(--line);border-radius:12px;background:#fff}
-    .stat .k{font-size:12px;color:var(--muted)}
-    .stat .v{font-size:20px;font-weight:700}
-    .note{font-size:12px;color:var(--muted)}
+    .stat .k{font-size:12px;color:var(--muted)} .stat .v{font-size:20px;font-weight:700}
     .hidden{display:none}
-
-    /* --- Right Config Drawer --- */
-    .config-drawer { position: fixed; top: 0; right: -420px; width: 400px; height: 100vh;
-      background: #fff; border-left: 1px solid var(--line);
-      box-shadow: -6px 0 20px rgba(0,0,0,.06);
-      transition: right .25s ease; z-index: 50;
-      display: flex; flex-direction: column; }
-    .config-drawer.open { right: 0; }
-    .config-header { display:flex; align-items:center; justify-content:space-between;
-      padding:12px 14px; border-bottom:1px solid var(--line); }
-    .config-body { padding:14px; overflow:auto; }
-    .cfg-group { margin-bottom:16px; }
-    .cfg-list { border:1px solid var(--line); border-radius:10px; padding:10px }
-    .cfg-list .row { display:flex; align-items:center; gap:8px; margin:6px 0 }
-    .cfg-list input[type=text]{ flex:1; padding:8px 10px; border:1px solid var(--line); border-radius:8px; }
-    .cfg-actions .btn { margin-right:6px }
-    .config-tabbar { display:flex; gap:6px; flex-wrap:wrap; margin:8px 0 12px }
-    .config-tabbar .btn.active { background: var(--pri-ghost); border-color: var(--pri); }
-    .cfg-note { font-size:12px; color:var(--muted); }
+    /* error toast */
+    .toast{position:fixed;bottom:16px;left:16px;right:16px;padding:10px 12px;border-radius:10px;background:#fee2e2;color:#991b1b;border:1px solid #fecaca;z-index:9999;box-shadow:0 6px 20px rgba(0,0,0,.08)}
+    .config-drawer{position:fixed;top:0;right:-420px;width:400px;height:100vh;background:#fff;border-left:1px solid var(--line);box-shadow:-6px 0 20px rgba(0,0,0,.06);transition:right .25s ease;z-index:50;display:flex;flex-direction:column}
+    .config-drawer.open{right:0}
+    .config-header{display:flex;align-items:center;justify-content:space-between;padding:12px 14px;border-bottom:1px solid var(--line)}
+    .config-body{padding:14px;overflow:auto}
+    .config-tabbar{display:flex;gap:6px;flex-wrap:wrap;margin:8px 0 12px}
+    .config-tabbar .btn.active{background:var(--pri-ghost);border-color:var(--pri)}
+    .cfg-list{border:1px solid var(--line);border-radius:10px;padding:10px}
+    .cfg-list .row{display:flex;gap:8px;align-items:center;margin:6px 0}
+    .cfg-list input[type=text]{flex:1;padding:8px 10px;border:1px solid var(--line);border-radius:8px}
   </style>
 </head>
 <body>
@@ -64,10 +52,7 @@
     <aside class="sidebar">
       <div class="brand">
         <div class="logo" aria-hidden="true"></div>
-        <div>
-          <h1>Theatre ERP</h1>
-          <div class="note">SQLite-in-browser · GitHub Pages ready</div>
-        </div>
+        <div><h1>Theatre ERP</h1><div class="note">SQLite-in-browser · GitHub Pages ready</div></div>
       </div>
       <div class="nav" id="nav"></div>
       <hr style="border:none;border-top:1px solid var(--line);margin:12px 0">
@@ -83,13 +68,12 @@
       <div class="toolbar">
         <div class="grow"></div>
         <button class="btn" id="btn-sample">Load Sample Data</button>
-        <button id="btn-config-gear" class="btn">⚙️ Config</button>
+        <button class="btn" id="btn-config-gear">⚙️ Config</button>
       </div>
       <section id="view"></section>
     </main>
   </div>
 
-  <!-- Right-side Config Drawer -->
   <aside id="config-drawer" class="config-drawer" aria-hidden="true">
     <div class="config-header">
       <strong>Configuration</strong>
@@ -107,8 +91,23 @@
   </aside>
 
   <script>
+// ---- Error handler to surface JS issues on-page ----
+function toast(msg){
+  const t=document.createElement('div'); t.className='toast'; t.textContent=msg;
+  document.body.append(t); setTimeout(()=>t.remove(), 8000);
+}
+window.addEventListener('error', e=> toast('JS Error: '+(e.message||e.error)));
+window.addEventListener('unhandledrejection', e=> toast('Promise Error: '+(e.reason&&e.reason.message?e.reason.message:e.reason)));
+
+// ---- Utilities ----
+function escapeSql(s){ return String(s||'').replace(/'/g, "''").replace(/\n/g,' '); }
+function el(t,a={},c=[]){ const n=document.createElement(t); for(const [k,v] of Object.entries(a)){ if(k==='class') n.className=v; else if(k==='html') n.innerHTML=v; else if(k.startsWith('on')) n.addEventListener(k.slice(2),v); else n.setAttribute(k,v); } for(const ch of [].concat(c)) n.append(ch instanceof Node? ch: document.createTextNode(ch)); return n; }
+function tableHead(cols){ const tr=el('tr'); cols.forEach(c=>tr.append(el('th',{},c))); return el('thead',{},[tr]); }
+function money(n){ n=Number(n||0); return new Intl.NumberFormat(undefined,{style:'currency',currency:'USD'}).format(n); }
+const cap=s=> s? s[0].toUpperCase()+s.slice(1):'';
+
 let SQL, db;
-const MODULES = [
+const MODULES=[
   {key:'dashboard', label:'Dashboard'},
   {key:'productions', label:'Productions'},
   {key:'events', label:'Events'},
@@ -125,25 +124,13 @@ const idbStore = {
   del(key){ return new Promise((res,rej)=>{ const o=indexedDB.open(this.dbName,this.dbVersion); o.onupgradeneeded=()=>this._ensure(o); o.onerror=()=>rej(o.error); o.onsuccess=()=>{ const tx=o.result.transaction(this.store,'readwrite'); const st=tx.objectStore(this.store); const rq=st.delete(key); rq.onsuccess=()=>res(true); rq.onerror=()=>rej(rq.error); }; }); }
 };
 
-function el(t,a={},c=[]){ const n=document.createElement(t); for(const [k,v] of Object.entries(a)){ if(k==='class') n.className=v; else if(k==='html') n.innerHTML=v; else if(k.startsWith('on')) n.addEventListener(k.slice(2),v); else n.setAttribute(k,v); } for(const ch of [].concat(c)) n.append(ch instanceof Node? ch: document.createTextNode(ch)); return n; }
-function tableHead(cols){ const tr=el('tr'); cols.forEach(c=>tr.append(el('th',{},c))); return el('thead',{},[tr]); }
-function money(n){ n=Number(n||0); return new Intl.NumberFormat(undefined,{style:'currency',currency:'USD'}).format(n); }
-const cap=s=> s? s[0].toUpperCase()+s.slice(1):'';
-
 function renderNav(){
   const nav=document.getElementById('nav'); nav.innerHTML='';
   MODULES.forEach(m=> nav.append(el('button',{type:'button','data-key':m.key,onclick:()=>route(m.key)},[m.label])) );
 }
 function route(key){
   const v=document.getElementById('view'); v.innerHTML='';
-  const map={
-    dashboard: renderDashboard,
-    productions: renderProductions,
-    events: renderEvents,
-    volunteers: renderVolunteers,
-    income: ()=>renderTx('income'),
-    expenses: ()=>renderTx('expense')
-  };
+  const map={ dashboard: renderDashboard, productions: renderProductions, events: renderEvents, volunteers: renderVolunteers, income: ()=>renderTx('income'), expenses: ()=>renderTx('expense') };
   (map[key]||(()=>v.append('Not implemented')))(v);
 }
 
@@ -173,7 +160,6 @@ function bootstrap(){
   `);
 }
 
-// Views
 function stat(k,v){ return el('div',{class:'stat'},[el('div',{class:'k'},k), el('div',{class:'v'},String(v))]); }
 function renderDashboard(v){
   const income=execObj(`SELECT IFNULL(SUM(amount),0) s FROM transactions WHERE type='income'`)[0]?.s||0;
@@ -323,7 +309,7 @@ function editTx(kind,id){
   });
 }
 
-// =============== Config Drawer ===============
+// Config drawer
 function migrateConfig(){
   run(`
     CREATE TABLE IF NOT EXISTS rates (key TEXT PRIMARY KEY, value REAL NOT NULL DEFAULT 0);
@@ -372,7 +358,7 @@ function renderCfgCategories(host){
     cfgListBlock('Payment Methods','payment_method'),
     cfgListBlock('Event Kinds','event_kind'),
   );
-  host.append(el('div',{class:'cfg-note'},'These lists appear in forms.'));
+  host.append(el('div',{class:'note'},'These lists appear in forms.'));
 }
 
 function renderCfgRates(host){
@@ -390,7 +376,7 @@ function renderCfgRates(host){
   const add=el('div',{class:'row'}), nk=el('input',{type:'text',placeholder:'rate_key (unique)'}), nv=el('input',{type:'text',placeholder:'0.00'}), addBtn=el('button',{class:'btn pri'},'Add');
   addBtn.onclick=()=>{ if(!nk.value.trim())return; const num=Number(nv.value||0); run("INSERT INTO rates(key,value) VALUES ('"+escapeSql(nk.value.trim())+"',"+num+")"); cfg.render(); };
   add.append(nk,nv,addBtn);
-  host.append(el('h3',{},'Rates / Settings'), box, add, el('div',{class:'cfg-note'},'Use for tax %, fees, FX rates, etc.'));
+  host.append(el('h3',{},'Rates / Settings'), box, add, el('div',{class:'note'},'Use for tax %, fees, FX rates, etc.'));
 }
 
 function renderCfgBanks(host){
@@ -398,7 +384,7 @@ function renderCfgBanks(host){
   const box=el('div',{class:'cfg-list'});
   rows.forEach(r=>{
     const row=el('div',{class:'row'});
-    const name=el('input',{type:'text',value:r.name,placeholder:'Name (required)'});
+    const name=el('input',{type:'text',value:r.name||'',placeholder:'Name (required)'});
     const bank=el('input',{type:'text',value:r.bank||'',placeholder:'Bank'});
     const acct=el('input',{type:'text',value:r.account_number||'',placeholder:'Account #'});
     const iban=el('input',{type:'text',value:r.iban||'',placeholder:'IBAN'});
@@ -415,7 +401,7 @@ function renderCfgBanks(host){
   const add=el('div',{class:'row'}), n=el('input',{type:'text',placeholder:'Name (required)'}), b=el('input',{type:'text',placeholder:'Bank'}), a=el('input',{type:'text',placeholder:'Account #'}), i=el('input',{type:'text',placeholder:'IBAN'}), s=el('input',{type:'text',placeholder:'SWIFT'}), addBtn=el('button',{class:'btn pri'},'Add');
   addBtn.onclick=()=>{ if(!n.value.trim()) return; run("INSERT INTO bank_accounts(name,bank,account_number,iban,swift,notes) VALUES ('"+escapeSql(n.value)+"','"+escapeSql(b.value)+"','"+escapeSql(a.value)+"','"+escapeSql(i.value)+"','"+escapeSql(s.value)+"','')"); cfg.render(); };
   add.append(n,b,a,i,s,addBtn);
-  host.append(el('h3',{},'Bank Accounts'), box, add, el('div',{class:'cfg-note'},'Store IBAN/SWIFT for payouts.'));
+  host.append(el('h3',{},'Bank Accounts'), box, add, el('div',{class:'note'},'Store IBAN/SWIFT for payouts.'));
 }
 
 function renderCfgMaintenance(host){
@@ -427,7 +413,7 @@ function renderCfgMaintenance(host){
   const fullReset=el('button',{class:'btn warn'},'Full Reset (Empty DB)');
   fullReset.onclick=async()=>{ if(!confirm('Completely reset the browser database?')) return; await idbStore.del('sqlite'); alert('Cleared. Reloading…'); location.reload(); };
   actions.append(delTx,wipe,fullReset);
-  host.append(el('h3',{},'Maintenance'), actions, el('div',{class:'cfg-note'},'Export DB before destructive actions.'));
+  host.append(el('h3',{},'Maintenance'), actions, el('div',{class:'note'},'Export DB before destructive actions.'));
 }
 function wipeSampleData(){
   if(!confirm('Wipe productions, events, volunteers, budgets, transactions?')) return;
@@ -479,7 +465,8 @@ async function init(){
       bootstrap();
     }
   } catch(e){
-    console.error(e); db = new SQL.Database(); bootstrap();
+    toast('Init failed, starting fresh DB.'); console.error(e);
+    db = new SQL.Database(); bootstrap();
   }
   renderNav(); route('dashboard');
 }
@@ -492,10 +479,10 @@ document.addEventListener('DOMContentLoaded', ()=>{
   document.getElementById('btn-sample').onclick = ()=> alert('Sample DB auto-loads on first visit. To reload, click Reset (New DB).');
 
   // Config drawer
-  cfg.drawer = document.getElementById('config-drawer');
-  document.getElementById('btn-config-gear').onclick = () => cfg.open();
-  document.getElementById('cfg-close').onclick = () => cfg.close();
-  document.querySelectorAll('[data-cfg-tab]').forEach(b=> b.addEventListener('click', ()=> cfg.setTab(b.dataset.cfgTab)) );
+  const drawer = document.getElementById('config-drawer');
+  document.getElementById('btn-config-gear').onclick = ()=>{ drawer.classList.add('open'); cfg.render(); };
+  document.getElementById('cfg-close').onclick = ()=> drawer.classList.remove('open');
+  document.querySelectorAll('[data-cfg-tab]').forEach(b=> b.addEventListener('click', ()=>{ document.querySelectorAll('.config-tabbar .btn').forEach(x=>x.classList.remove('active')); b.classList.add('active'); cfg.setTab(b.dataset.cfgTab); }) );
 
   init();
 });
